# vins-3d

./: .rosinstall
VINS-RGBD/camera_model/: CMakeLists.txt
VINS-RGBD/config/femto/: femto_color_config.yaml  femto_depth_config.yaml
VINS-RGBD/config/kinect/: kinect_color_config.yaml  kinect_depth_config.yaml
VINS-RGBD/config/realsense/: realsense_color_config.yaml
VINS-RGBD/feature_tracker/: CMakeLists.txt
VINS-RGBD/feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
VINS-RGBD/pose_graph/: CMakeLists.txt
VINS-RGBD/vins_estimator/: CMakeLists.txt
VINS-RGBD/vins_estimator/launch/: femto.launch  kinect.launch  realsense_color.launch
VINS-RGBD/vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  parameters.cpp  parameters.h
VINS-RGBD/vins_estimator/src/factor/: depth_factor.cpp  depth_factor.h
VINS-RGBD/vins_estimator/src/utility/: visualization.cpp
orbbec_camera/: CMakeLists.txt  package.xml
orbbec_camera/cmake/: FindORBBEC_SDK.cmake
orbbec_camera/config/: ob_camera_params.yaml
orbbec_camera/include/orbbec_camera/: OBCamera.h  utils.h
orbbec_camera/launch/: begin.launch
orbbec_camera/src/: ob_camera_node.cpp
orbbec_camera/src/tools/: OBCamera.cpp  utils.cpp
voxblox/voxblox_ros/cfg/: rgbd_dataset.yaml
voxblox/voxblox_ros/launch/: cow_and_lady_dataset.launch  femto.launch  rgbd_dataset_l515.launch
